<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:minHeight="64dp" android:padding="8dp" android:gravity="center_vertical">
        <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"
            android:layout_marginStart="8dp" android:text="@string/library_computers" android:textAppearance="@style/ScreenTitle"
            android:accessibilityHeading="true" tools:targetApi="p" />
        <ImageButton android:id="@+id/settingsButton" style="@style/ToolbarIcon"
            android:src="@drawable/ic_settings" android:contentDescription="@string/settings" />
        <ImageButton android:id="@+id/helpButton" style="@style/ToolbarIcon"
            android:src="@drawable/ic_help" android:contentDescription="@string/help" />
        <ImageButton android:id="@+id/manuallyAddPc" style="@style/ToolbarIcon"
            android:src="@drawable/ic_add" app:tint="@color/accent" android:contentDescription="@string/title_add_pc" />
    </LinearLayout>
    <FrameLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <FrameLayout android:id="@+id/pcFragmentContainer"
            android:layout_width="match_parent" android:layout_height="match_parent" />
        <RelativeLayout android:id="@+id/no_pc_found_layout"
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:gravity="center" android:padding="24dp">
            <ProgressBar android:id="@+id/pcs_loading"
                android:layout_width="48dp" android:layout_height="48dp" android:layout_centerHorizontal="true"
                android:importantForAccessibility="no" android:indeterminate="true" />
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_below="@id/pcs_loading" android:layout_marginTop="24dp" android:gravity="center"
                android:text="@string/searching_pc" android:textColor="@color/on_surface_variant" android:textSize="16sp" />
        </RelativeLayout>
    </FrameLayout>
</LinearLayout>
